# ethzasl_msf

./: .gitignore  CMakeLists.txt  COPYRIGHT_Template.h  README.md  README.textile  TODO  groups  index.html  jenkins-pipeline  make_doxygen  msf_dox.dox  msf_dox_layout.xml  params.json  project.config  stack.xml
ethzasl_msf/: CMakeLists.txt  package.xml
msf_core/: CHANGELOG.rst  CMakeLists.txt  IMPORTANT  mainpage.dox  manifest.xml  package.xml
msf_core/cfg/: MSF_Core.cfg  parameters.cfg
msf_core/cmake/: FindGLog.cmake  export_flags.cmake
msf_core/include/msf_core/: MSF_Core.h  eigen_conversions.h  eigen_utils.h  falsecolor.h  glog.h  gps_conversion.h  measurement.h  msf_IMUHandler.h  msf_IMUHandler_ROS.h  msf_checkFuzzyTracking.h  msf_core.h  msf_core.hpp  msf_fwd.hpp  msf_fwds.h  msf_fwds.hpp  msf_macros.h  msf_measurement.h  msf_measurement.hpp  msf_sensorhandler.h  msf_sensormanager.h  msf_sensormanager.hpp  msf_sensormanagerROS.h  msf_sensormanagerROS.hpp  msf_sortedContainer.h  msf_sortedContainer.hpp  msf_state.h  msf_state.hpp  msf_statedef.hpp  msf_statevisitor.h  msf_tmp.h  msf_tmp.hpp  msf_tools.h  msf_tools.hpp  msf_types.h  msf_types.hpp  msf_types.tpp  msf_typetraits.h  msf_typetraits.hpp  (+10 more)
msf_core/msg/: ext_imu.msg
msf_core/scripts/: plot_accbias  plot_attitude  plot_attitude_w_gt  plot_calib  plot_difference  plot_error  plot_gyrbias  plot_gyrbias_slam  plot_position  plot_position_slam_w_gt  plot_position_w_gt  plot_pqvw  plot_pqwv  plot_pvw  plot_pwv  plot_qvw  plot_qwv  plot_relevant  plot_relevant~  plot_scale  plot_velocity  plot_velocity_w_gt
msf_core/src/: .gitignore  MSF_Core.cpp  calcQ.h  measurement.cpp  msf_core.cc  similaritytransform.cc  similaritytransform.cpp  state.cpp  test_msf_core.cc  test_similaritytransform.cc  test_similaritytransform.cpp  test_staticstatelist.cc  test_tmptestbed.cc  teststaticstatelist.cc
msf_distort/: .gitignore  CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
msf_distort/cfg/: MSF_Distort.cfg  parameters_distort.cfg
msf_distort/launch/: msf_distort.launch
msf_distort/src/: .gitignore  msf_distort.cc
msf_eval/: CMakeLists.txt  manifest.xml  package.xml
msf_eval/Matlab/: .gitignore  SLAM_vicon_msf_abs_cov.m  SLAM_vicon_msf_rel_cov.m  evaluation.m  evaluation_cov.m  matfig2pgf.m  matfig2pgf_gui_options.m  matfig2pgf_menu.m  matfig2pgf_options.m  plot_paths.m
msf_eval/src/: msf_eval.cpp
msf_simulate/: .gitignore  CMakeLists.txt  manifest.xml  package.xml
msf_simulate/src/: MSFSimulator.cc  msf_simulator.cc
msf_timing/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
msf_timing/cmake/: export_flags.cmake
msf_timing/src/: Timer.cc
msf_updates/: .gitignore  CHANGELOG.rst  CMakeLists.txt  anymal_pose_sensor_fix.yaml  aslam_sensor_fix.yaml  demo_fix.yaml  gps_vision_sensor_fix.yaml  mainpage.dox  manifest.xml  noise_drift_handler_fix.yaml  package.xml  pos_error_leica_fix.yaml  pose_pressure_sensor_fix.yaml  pose_sensor_fix.yaml  pose_sensor_test_fix.yaml  pose_sensor_test_vicon_fix.yaml  position_pose_sensor_fix.yaml  position_pose_tol_sensor_fix.yaml  position_sensor_fix.yaml  position_to_error_handler_fix.yaml  position_vision_sensor_fix.yaml  sph_position_sensor_fix.yaml  test_msf_position_fix.yaml  test_msf_position_noise_fix.yaml  test_msf_position_pose_fix.yaml  velocity_sensor_fix.yaml  velocity_velocity_sensor_fix.yaml  viconpos_sensor_fix.yaml
msf_updates/cfg/: .gitignore  Flow3PositionPoseSensor.cfg  Flow3Sensor.cfg  PosePressureSensor.cfg  PositionPoseSensor.cfg  SinglePoseSensor.cfg  SinglePositionSensor.cfg  SingleVelocitySensor.cfg  SphericalPositionSensor.cfg  darpa.rviz  parameters_pose_pressure_sensor.cfg  parameters_pose_sensor.cfg  parameters_posesensor.cfg  parameters_posesensor.cfgc  parameters_position_pose_sensor.cfg  parameters_position_vision_sensor.cfg  parameters_positionsensor.cfg  parameters_spherical_positionsensor.cfg  parameters_vision_gps_sensor.cfg
msf_updates/launch/: anymal_loam_pose_sensor.launch  aslam_sensor.launch  create_ts_VH.launch  darpa.launch  darpa_penguin.launch  darpa_penguin_loam.launch  darpa_rsl_anymal.launch  demo.launch  demo1_VH.launch  demo2_VH.launch  init_yaw_from_compass.launch  leica_error_check.launch  nn_noise_estimation.launch  pose_pressure_sensor.launch  pose_sensor.launch  pose_tol_sensor.launch  pose_vanilla_MH.launch  pose_vanilla_VH.launch  position_all_VH.launch  position_noised_VH.launch  position_outlier_VH.launch  position_pose_sensor.launch  position_pose_tol_sensor.launch  position_sensor.launch  position_stable_VH.launch  position_tol_sensor.launch  position_vanilla_MH.launch  position_vanilla_VH.launch  pp_all_VH.launch  pp_new_VH.launch  pp_noised_VH.launch  pp_performance_VH.launch  pp_poseonly_VH.launch  pp_positiononly_VH.launch  pp_vanilla_VH.launch  real_data.launch  restart_rovio.launch  rovio_MH.launch  rovio_VH.launch  sample_launch.launch  (+10 more)
msf_updates/msg/: PointWithCovarianceStamped.msg  PositionWithCovarianceStamped.msg
msf_updates/params/: darpa_loam.yaml  darpa_loam_replay.yaml  darpa_rovio_replay.yaml  msf_loam.yaml  msf_parameters_vision_adis_p23022.txt  msf_sensor_fix.yaml
msf_updates/src/: .gitignore  main.cpp  pose_measurement.hpp  pose_measurements.h  pose_sensor.cpp  pose_sensor.h  pose_sensor.hpp  pose_sensorhandler.h  pose_sensorhandler.hpp  pose_sensormanager.h  position_measurements.h  position_sensor.cpp  position_sensor.h  position_sensor.hpp  position_sensorhandler.h  position_sensorhandler.hpp  position_sensormanager.h  prototyping.cc  viconpos_measurement.hpp  viconpos_measurements.h  viconpos_sensor.h  viconpos_sensor.hpp  viconpos_sensorhandler.h  viconpos_sensorhandler.hpp  viconpos_sensormanager.h
sensor_fusion/: CMakeLists.txt  package.xml
sensor_fusion_comm/: CHANGELOG.rst  CMakeLists.txt  package.xml
sensor_fusion_comm/msg/: ArrayWithKey.msg  DoubleArrayStamped.msg  DoubleMatrixStamped.msg  ExtEkf.msg  ExtState.msg
sensor_fusion_comm/srv/: AddListener.srv  EvalListener.srv  InitHeight.srv  InitScale.srv  InitTransform.srv  InitYaw.srv
(+952 files in other folders)
