<package>
  <name>msf_distort</name>
  <version>1.0.1</version>
  <description>msf_distort</description>
  <maintainer email="simon.lynen@mavt.ethz.ch">Simon Lynen</maintainer>
  <maintainer email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/modular_sensor_fusion</url>
  <url type="bugtracker">https://github.com/ethz-asl/sensor_fusion/issues</url>

  <author>Simon Lynen</author>
  <author>Markus Achtelik</author>
  <author>Stephan Weiss</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>msf_core</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>msf_core</run_depend>
</package>
