<package>
  <name>msf_updates</name>
  <version>1.0.1</version>
  <description>Modular Sensor Fusion (MSF) framework containing the update sensor modules</description>
  <maintainer email="simon.lynen@mavt.ethz.ch">Simon Lynen</maintainer>
  <maintainer email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/modular_sensor_fusion</url>
  <url type="bugtracker">https://github.com/ethz-asl/sensor_fusion/issues</url>

  <author>Simon Lynen</author>
  <author>Markus Achtelik</author>
  <author>Stephan Weiss</author>
  <author>Georg Wiedebach</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>msf_core</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_fusion_comm</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>msf_core</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_fusion_comm</run_depend>
</package>
