<package>
  <name>sensor_fusion</name>
  <version>0.0.1</version>
  <description>msf</description>
  <maintainer email="simon.lynen@mavt.ethz.ch">Simon Lynen</maintainer>
  <maintainer email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/modular_sensor_fusion</url>
  <url type="bugtracker">https://github.com/ethz-asl/sensor_fusion/issues</url>

  <author>Simon Lynen</author>
  <author>Markus Achtelik</author>
  <author>Stephan Weiss</author>
  <author>Georg Wiedebach</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>msf_eval</run_depend>
  <run_depend>msf_simulate</run_depend>
  <run_depend>msf_core</run_depend>
  <run_depend>msf_distort</run_depend>
  <run_depend>msf_updates</run_depend>
  <run_depend>msf_timing</run_depend>  
  <run_depend>sensor_fusion_comm</run_depend>

  <!-- Dependencies needed only for running tests. -->





  <export>
    <metapackage/>
  </export>
</package>
