<package>
  <name>sensor_fusion_comm</name>
  <version>1.0.1</version>
  <description>This package contains messages, services and action definitions needed by ethzasl_sensor_fusion and nodes communicating with it.</description>
  <maintainer email="none@none.com">Stephan Weiss</maintainer>
  <maintainer email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/sensor_fusion_comm</url>
  <url type="bugtracker">https://github.com/ethz-asl/sensor_fusion/issues</url>

  <author>Stephan Weiss</author>
  <author>Markus Achtelik</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
